# 112_1_final

./: CMakeLists.txt  stage1.txt  stage2.txt  stage3.txt
include/: header.h
src/: README.txt  bomb.c  detect.c  file.c  fresharray.c  game.c  initial_src.c  main.c  menu.c  moveplayer.c  moveplayer2.c  renew.c  resource.c  score.c
